# dwm

./: .gitignore  CMakeLists.txt  config.h  depends.txt  dwm.c
sh/: dwm-clock  dwm-screenshot  dwm-screenshot-box  startdwm
